--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   </head>
   <body>
     <main>
-        <h1>hi its me yonas</h1>  
+        <h1>hi its me yonas do u have humbergur</h1> 
+	    <p>this is my website</p>
     </main>
 	<script src="index.js"></script>
   </body>
