--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <main>
         <h1>hi its me yonas do u have humbergur</h1> 
-	    <p>this is my website</p>
+	    <p>why are u here</p>
     </main>
 	<script src="index.js"></script>
   </body>
