--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   </head>
   <body>
     <main>
-        <h1>hi its me yonas do u have humbergur</h1> 
-	    <p>why are u here</p>
+        <h1>hi its me yonas you have been rick rolled</h1> 
+	    <p>hehehehehehehehehhe</p>
     </main>
 	<script src="index.js"></script>
   </body>
