--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <main>
         <h1>hi its me yonas you have been rick rolled</h1> 
 	    <p>hehehehehehehehehhe</p>
-    <embed src="icegif-162.gif"
+    <embed src="icegif-162.gif" >
     </main>
 	<script src="index.js"></script>
   </body>
