--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <h1>hi its me yonas you have been rick rolled</h1> 
 	    <p>hehehehehehehehehhe</p>
     <embed src="icegif-162.gif" >
+	    <embed src="gif.gif">
     </main>
 	<script src="index.js"></script>
   </body>
