--- a/index.html
+++ b/index.html
@@ -12,8 +12,12 @@
     <main>
         <h1>hi its me yonas you have been rick rolled</h1> 
 	    <p>hehehehehehehehehhe</p>
+	    <p>u have no rizz</p>
     <embed src="icegif-162.gif" >
 	    <embed src="gif.gif">
+	    <h2>if u are watching this you owe me takis</h2>
+	    <h3>im not kidding you really do</h3>
+	    
     </main>
 	<script src="index.js"></script>
   </body>
