--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 	    <embed src="gif.gif">
 	    <h2>if u are watching this you owe me takis</h2>
 	    <h3>im not kidding you really do</h3>
+	    <embed src="takis.jpg">
 	    
     </main>
 	<script src="index.js"></script>
