--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <embed src="icegif-162.gif" >
 	    <embed src="gif.gif">
 	    <h2>if u are watching this you owe me takis</h2>
-	    <h1>if u are watching this you owe me takis</h1>
-	    <h3>im not kidding you really do</h3>
+	    <h1>all bags in the whole store heheheheheheheeh</h1>
+	    <h3>NOW NOW NOW NOW NOW NOW NOW NOW NOW NOW NOW NOW NOW NOW!</h3>
 	    <h3>im not kidding you really do</h3>
 	    <embed src="takis.jpg">
 	    
