--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 	    <h3>NOW NOW NOW NOW NOW NOW NOW NOW NOW NOW NOW NOW NOW NOW!</h3>
 	    <h3>im not kidding you really do</h3>
 	    <embed src="takis.jpg">
+	    <embed src="urmum.jpg">
 	    
     </main>
 	<script src="index.js"></script>
