--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 	    <h3>im not kidding you really do</h3>
 	    <embed src="takis.jpg">
 	    <embed src="urmum.jpg">
+	    <h2>and some wingstop too hehe</h2>
 	    
     </main>
 	<script src="index.js"></script>
