--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
   </head>
   <body>
     <main>
+	    <h1>hi this is my website</h1>
         <h1>hi its me yonas you have been rick rolled</h1> 
 	    <p>hehehehehehehehehhe</p>
 	    <p>u have no rizz</p>
     <embed src="icegif-162.gif" >
 	    <embed src="gif.gif">
+	    <h2>my takis<h2>
 	    <h2>if u are watching this you owe me takis</h2>
 	    <h1>all bags in the whole store heheheheheheheeh</h1>
 	    <h3>NOW NOW NOW NOW NOW NOW NOW NOW NOW NOW NOW NOW NOW NOW!</h3>
