--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	    <h3>im not kidding you really do</h3>
 	    <embed src="takis.jpg">
 	    <embed src="urmum.jpg">
-		    <embed src="wings jpg">
+		    <embed src="wings.webp">
 	    <h2>and some wingstop too hehe</h2>
 	    
     </main>
