--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="mystyle.css">
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
   </head>
-  <body style="background-color:goldenrod;">
+  <body>
     <main>
 	    <h1>hi this is my website</h1>
         <h1>hi its me yonas you have been rick rolled</h1> 
