--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
     <link rel="stylesheet" href="mystyle.css">
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
   </head>
-  body{
-	font-family: 'Courier New', monospace;}
-    <main>
+  <body> 
+	  <main>
 	    <h1>hi this is my website</h1>
         <h1>hi its me yonas you have been rick rolled</h1> 
 	    <p>hehehehehehehehehhe</p>
