--- a/index.html
+++ b/index.html
@@ -10,21 +10,21 @@
   </head>
   <body> 
 	  <main>
-	    <h1>hi this is my website</h1>
-        <h1>hi its me yonas you have been rick rolled</h1> 
-	    <p>hehehehehehehehehhe</p>
-	    <p>u have no rizz</p>
+	    <h1>Hi this is my website</h1>
+        <h1>Hi its me yonas you have been rick rolled</h1> 
+	    <p>Hehehehehehehehehhe</p>
+	    <p>You have no rizz</p>
     <embed src="icegif-162.gif" >
 	    <embed src="gif.gif">
-	    <h2>my takis<h2>
-	    <h2>if u are watching this you owe me takis</h2>
-	    <h1>all bags in the whole store heheheheheheheeh</h1>
+	    <h2>My takis<h2>
+	    <h2>If u are watching this you owe me takis</h2>
+	    <h1>All bags in the whole store heheheheheheheeh</h1>
 	    <h3>NOW NOW NOW NOW NOW NOW NOW NOW NOW NOW NOW NOW NOW NOW!</h3>
-	    <h3>im not kidding you really do</h3>
+	    <h3>I'm not kidding you really do</h3>
 	    <embed src="takis.jpg">
 	    <embed src="urmum.jpg">
 		    <embed src="wings.webp">
-	    <h2>and some wingstop too hehe</h2>
+	    <h2>And some wingstop too hehe</h2>
 	    
     </main>
 	<script src="index.js"></script>
