--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
     <link rel="stylesheet" href="mystyle.css">
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
   </head>
-  <body> 
-	  <main>
+  <body>
+	  
+<main>
 	    <h1>Hi this is my website</h1>
         <h1>Hi its me yonas you have been rick rolled</h1> 
+	<button type="button" onclick="myFunction()">Try it</button>
 	    <p>Hehehehehehehehehhe</p>
 	    <p>You have no rizz</p>
     <embed src="icegif-162.gif" >
