--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
         <h1>Hi its me yonas you have been rick rolled</h1> 
 	<button type="button" onclick="myFunction()">Try it</button>
 	    <p>Hehehehehehehehehhe</p>
-	    <p>You have no rizz</p>
+	    <p id="demo">You have no rizz</p>
+	
     <embed src="icegif-162.gif" >
 	    <embed src="gif.gif">
 	    <h2>My takis<h2>
