--- a/index.html
+++ b/index.html
@@ -30,6 +30,6 @@
 	    <h2>And some wingstop too hehe</h2>
 	    
     </main>
-	<script src="index.js"></script>
+	<script src="myScript.js"></script>
   </body>
 </html>
